--- a/index.html
+++ b/index.html
@@ -2,4 +2,6 @@ This is so cool and interesting. How ya all doin?
 
 <marquee> Thank God for His mercies </marquee>
 
-Hallelujah. It is finished
+Hallelujah. It is finished.
+
+What a shock!!!
