--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-This is so cool and interesting. How ya all doin?
-
-What a shock!!!
+This is real fun
 
 <marquee> Thank God for His mercies </marquee>
 
