--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
-This is real fun. Let's see the update!
-<<<<<<< HEAD
-
-Ok now. Very shocking. Not working
-=======
->>>>>>> edb8b7ae9aaa3d925548693b161a5b38b90f29d0
+Now. Let's start from the very beginning.
 
 <marquee> Thank God for His mercies </marquee>
 
